--- a/1942.html
+++ b/1942.html
@@ -67,7 +67,7 @@
                 <a
                   class=""
                   data-type=""
-                  href="janata.html"
+                  href="1942.html"
                 >
                   <img
                     class="black-logo"
