--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <a
                   class=""
                   data-type=""
-                  href="janata.html"
+                  href="1942.html"
                 >
                   <img
                     class="black-logo"
@@ -667,5 +667,6 @@
     </script>
 
 </body>
+
 
 </html>
